--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <H1> IMAGEM </H1>
-    <ul>
-        <li>escola</li>
-        <li>aluno</li>
+<header class="cabecalho">
+    <img class="cabecalho-imagem"src="novo ensino medio.jpg" alt="novo ensino medio">
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">Escola</li>
+        <li class="cabecalho-lista-item">Aluno</li>
     </ul>
     <header>
         
