--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="cabecalho">
-    <img class="cabecalho-imagem"src="novo ensino medio.jpg" alt="novo ensino medio">
-    <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">Escola</li>
-        <li class="cabecalho-lista-item">Aluno</li>
-    </ul>
-    <header>
-        
+    <header class="cabecalho">
+        <div>
+        <img class="cabecalho-imagem"src="novo ensino medio.jpg" alt="novo ensino medio">
+        </div>
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Aluno</li>
+        </ul>
+    </header>
+        <sectionn class="escola"> 
+            <h2 class="titulo"> aula</h2>
+            <p class="ecola-texto-um">Olá, estudante, seja bem-vindo e bem-vinda a mais uma aula comigo. Finalizamos na aula passada o nosso cabeçalho, eu estou muito feliz que você está aqui, que você não deixou ainda esse curso, temos uma ideia de continuar construindo a nossa página para representar nossa equipe. Eu finalizei uma seção muito importante, e agora nos cabe criar a seção que vai descrever a nossa escola, o nosso time. No meu caso é a minha escola. Então, vou compartilhar minha tela e vamos dar uma olhada no que está faltando. </p>
+            <p class="escola-texto-dois"></p>
+        </section>
+
 </body>
 </html>
